--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@ body{
     box-sizing: border-box;
 }
 
-/* .container{
-    width:800px;
-    height:800px;
+.container{
+    /* width:800px;
+    height:800px; */
+    max-width:700px;
     margin:0 auto;
-} */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
 .board {
     display:grid;
@@ -27,7 +30,7 @@ body{
 }
 
 .display{
-    width:400px;
+    /* width:400px; */
     margin:1rem auto;
 }
 
