--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap');
+
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:'Ranchers', Arial, Helvetica, sans-serif;
+    background:#242424;
 }
 
 .container{
@@ -10,29 +14,27 @@ body{
     max-width:700px;
     margin:0 auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto auto;
+    /* border:1px solid red; */
 }
 
 .board {
     display:grid;
     grid-template-columns: repeat(8, 50px);
     grid-template-rows: repeat(8, 50px);
-    font-size:20px;
+    font-size:1.25rem;
     font-family: "Dosis", Arial, sans-serif;
     font-weight: bold;
     position: relative;
     /* pointer-events: none; */
     border:3px solid #440000;
-    border-radius: 10px;
-    box-shadow: 7px 7px 30px #a8a8a8;
     width:400px;
-    margin:0 auto;
+    /* margin:0 auto; */
 }
 
-.display{
-    /* width:400px; */
-    margin:1rem auto;
-}
+/* .display{
+    border:1px solid yellow;
+} */
 
 .target-square{
     position: absolute;
@@ -40,7 +42,7 @@ body{
     left: 50%;
     z-index: 2;
     transform: translate(-50%, -50%);
-    font-size: 100px;
+    font-size: 5rem;
     font-weight: 900;
     color:#e0ac1c;
     pointer-events: none;
@@ -49,7 +51,6 @@ body{
 .lSq, .dSq {
     width:50px;
     height:50px;
-    display: grid;
 }
 
 .lSq {
@@ -62,33 +63,20 @@ body{
     color:#f3f3f3;
 }
 
-.square:nth-of-type(2){
-    border-radius: 10px 0 0 0;
-}
-
-.square:last-of-type{
-    border-radius: 0 0 10px 0;
-}
-
-/* .square:nth-of-type(8){
-    border-radius: 0 0 0 0;
-} */
-
-.square:nth-of-type(63){
-    border-radius: 0 0 10px 0;
+.square{
+    display: flex;
 }
 
 .square:hover {
-    opacity: 0.3;
-    background-color:#c7a341;
+    background-color:#5aa800;
 }
 
 .file {
-    text-align: right;
     font-size: 1.2em;
     align-self: flex-end;
     pointer-events: none;
 }
+
 
 .rank {
     pointer-events: none;
