--- a/style.css
+++ b/style.css
@@ -1,39 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Roboto&display=swap');
 
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family:'Ranchers', Arial, Helvetica, sans-serif;
-    background:#242424;
+    background:#f4f4f4;
 }
 
 .container{
-    /* width:800px;
-    height:800px; */
-    max-width:700px;
+    max-width:600px;
     margin:0 auto;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr auto;
+    gap:1rem;
     /* border:1px solid red; */
 }
 
 .board {
     display:grid;
-    grid-template-columns: repeat(8, 50px);
-    grid-template-rows: repeat(8, 50px);
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
     font-size:1.25rem;
-    font-family: "Dosis", Arial, sans-serif;
+    font-family: "Roboto", Arial, sans-serif;
     font-weight: bold;
     position: relative;
-    /* pointer-events: none; */
+    pointer-events: none;
     border:3px solid #440000;
     width:400px;
-    /* margin:0 auto; */
+    height:400px;
 }
 
 /* .display{
-    border:1px solid yellow;
+    border:1px solid blue;
 } */
 
 .target-square{
@@ -48,10 +47,10 @@ body{
     pointer-events: none;
 }
 
-.lSq, .dSq {
+/* .lSq, .dSq {
     width:50px;
     height:50px;
-}
+} */
 
 .lSq {
     background-color: #f3f3f3;
@@ -77,7 +76,71 @@ body{
     pointer-events: none;
 }
 
-
 .rank {
     pointer-events: none;
+}
+
+.start-btn{
+    font-family: 'Roboto', Arial;
+    font-weight: bold;
+    font-size:1.2rem;
+    padding:12px 16px;
+    background:black;
+    color:white;
+    border:none;
+    cursor: pointer;
+    width:100%;
+}
+
+.start-btn:hover{
+    background:#5aa800;
+}
+
+.game-data{
+    /* border:1px solid red; */
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-top: 1em;
+    color:white;
+    gap:2px;
+}
+
+/* .score-box{
+    
+} */
+
+.accuracy-box, .score-box{
+    text-align: center;
+    padding: 1rem;
+    background:rgb(0, 0, 0);
+    pointer-events: none;
+}
+
+.score, .percentage{
+    font-size: 2rem;
+}
+
+.time-progress{
+    width:100%;
+    height:1rem;
+    background:#5aa800;
+    grid-column: 2/3;
+    transition:width 1s linear;
+    display: none;
+}
+
+.correct{
+    background:#5aa800;
+}
+
+.incorrect{
+    background:#b10000;
+}
+
+.low{
+    background:#b10000;
+}
+
+.medium{
+    background:#e0b700;
 }
