--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body{
 }
 
 .square{
-    display: flex;
+    display: grid;
 }
 
 .square:hover {
@@ -74,10 +74,12 @@ body{
     font-size: 1.2em;
     align-self: flex-end;
     pointer-events: none;
+    opacity:0.5;
 }
 
 .rank {
     pointer-events: none;
+    opacity:0.5;
 }
 
 .start-btn{
@@ -122,7 +124,7 @@ body{
 
 .time-progress{
     width:100%;
-    height:1rem;
+    height:0.5em;
     background:#5aa800;
     grid-column: 2/3;
     transition:width 1s linear;
