--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family:'Ranchers', Arial, Helvetica, sans-serif;
-    background:#f4f4f4;
+    background:#f1f1f1;
 }
 
 .container{
-    max-width:600px;
+    max-width:850px;
     margin:0 auto;
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 1fr;
     gap:1rem;
     /* border:1px solid red; */
 }
@@ -27,13 +27,39 @@ body{
     position: relative;
     pointer-events: none;
     border:3px solid #440000;
-    width:400px;
-    height:400px;
+    width:300px;
+    height:300px;
+    margin: 0 auto;
 }
 
-/* .display{
-    border:1px solid blue;
-} */
+.board-wrapper{
+    width:306px;
+    margin: 0 auto;
+}
+
+.display{
+    width: 306px;
+    margin: 0 auto;
+    display: grid;
+    gap:2px;
+}
+
+.game-data{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    color:rgb(41, 41, 41);
+    gap:2px;
+}
+
+.message{
+    background:#fff;
+    padding: 1rem;
+    line-height: 140%;
+}
+
+.message h3{
+    text-align: center;
+}
 
 .target-square{
     position: absolute;
@@ -47,19 +73,14 @@ body{
     pointer-events: none;
 }
 
-/* .lSq, .dSq {
-    width:50px;
-    height:50px;
-} */
-
 .lSq {
-    background-color: #f3f3f3;
+    background-color: #fff;
     color:#440000;
 }
 
 .dSq {
     background-color: #440000;
-    color:#f3f3f3;
+    color:#fff;
 }
 
 .square{
@@ -71,7 +92,7 @@ body{
 }
 
 .file {
-    font-size: 1.2em;
+    font-size: 0.8em;
     align-self: flex-end;
     pointer-events: none;
     opacity:0.5;
@@ -80,6 +101,7 @@ body{
 .rank {
     pointer-events: none;
     opacity:0.5;
+    font-size: 0.8em;
 }
 
 .start-btn{
@@ -87,24 +109,17 @@ body{
     font-weight: bold;
     font-size:1.2rem;
     padding:12px 16px;
-    background:black;
-    color:white;
+    background:#fff;
+    color:rgb(41, 41, 41);
     border:none;
     cursor: pointer;
     width:100%;
+    text-transform: uppercase;
 }
 
 .start-btn:hover{
     background:#5aa800;
-}
-
-.game-data{
-    /* border:1px solid red; */
-    display: grid;
-    grid-template-columns: 1fr;
-    margin-top: 1em;
-    color:white;
-    gap:2px;
+    color:#fff;
 }
 
 /* .score-box{
@@ -114,7 +129,7 @@ body{
 .accuracy-box, .score-box{
     text-align: center;
     padding: 1rem;
-    background:rgb(0, 0, 0);
+    background:#fff;
     pointer-events: none;
 }
 
@@ -126,23 +141,67 @@ body{
     width:100%;
     height:0.5em;
     background:#5aa800;
-    grid-column: 2/3;
     transition:width 1s linear;
-    display: none;
+    display: block;
+    margin-top: 1em;
 }
 
 .correct{
     background:#5aa800;
+    color:white;
 }
 
 .incorrect{
     background:#b10000;
+    color:white;
+
 }
 
-.low{
-    background:#b10000;
+@media screen and (min-width:600px){
+    .board{
+        width:400px;
+        height:400px;
+    }
+
+    .board-wrapper, .display{
+        width:406px;
+    }
+
+    .display{
+        grid-template-columns: .5fr 1fr;
+    }
+
+    .message{
+        grid-column:1/3 ;
+    }
 }
 
-.medium{
-    background:#e0b700;
+@media screen and (min-width:850px){
+    .container{
+        grid-template-columns: 1fr 2fr;
+        grid-template-areas: "data board";
+    }
+
+    .board-wrapper{
+        grid-area: board;
+    }
+
+    .display{
+        grid-area: data;
+        grid-template-columns: 1fr;
+        /* max-width: 350px; */
+        grid-auto-rows: minmax(min-content, max-content);
+    }
+
+    .message{
+        grid-column:1 ;
+    }
+
+    .time-progress{
+        height:1em;
+    }
+
+    .rank, .file{
+        font-size:1.2rem;
+    }
 }
