--- a/style.css
+++ b/style.css
@@ -1,16 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
 
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Ranchers', Arial, Helvetica, sans-serif;
+    font-family:'Roboto', Arial, Helvetica, sans-serif;
     background:#f1f1f1;
+    position: relative;
+}
+
+header{
+    background:#568695;
+    color:#fff;
+}
+
+nav{
+    padding:0.5em;
+    font-weight: 900;
+    font-style: italic;
+    margin:0 auto;
+    width:300px;
 }
 
 .container{
     max-width:850px;
-    margin:0 auto;
+    margin:1rem auto;
     display: grid;
     grid-template-columns: 1fr;
     gap:1rem;
@@ -51,7 +65,7 @@ body{
     gap:2px;
 }
 
-.message{
+.message, .results{
     background:#fff;
     padding: 1rem;
     line-height: 140%;
@@ -59,6 +73,20 @@ body{
 
 .message h3{
     text-align: center;
+}
+
+.results{
+    display: none;
+}
+
+table{
+    margin:0 auto;
+    /* border:1px solid black; */
+}
+
+th, td{
+    text-align: center;
+    padding:12px 14px;
 }
 
 .target-square{
@@ -111,9 +139,22 @@ body{
     padding:12px 16px;
     background:#fff;
     color:rgb(41, 41, 41);
+    width: 100%;
     border:none;
     cursor: pointer;
-    width:100%;
+    text-transform: uppercase;
+}
+
+.close{
+    background:rgb(172, 1, 1);
+    color:white;
+    align-self: flex-end;
+    font-family: 'Roboto', Arial;
+    font-weight: bold;
+    font-size:1.2rem;
+    padding:6px 8px;
+    border:none;
+    cursor: pointer;
     text-transform: uppercase;
 }
 
@@ -142,7 +183,7 @@ body{
     height:0.5em;
     background:#5aa800;
     transition:width 1s linear;
-    display: block;
+    display: none;
     margin-top: 1em;
 }
 
@@ -154,8 +195,112 @@ body{
 .incorrect{
     background:#b10000;
     color:white;
-
 }
+
+.settings{
+    display: flex;
+    justify-content: end;
+}
+
+.settings button{
+    background:white;
+    border:none;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.modal{
+    position: absolute;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    background:rgba(0,0,0,0.6);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height:100vh;
+}
+
+.modal-inner{
+    background:white;
+    margin:1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:1rem;
+}
+
+.modal-inner h2{
+    text-align:center;
+}
+
+.setting{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width:250px;
+    color:#505050;
+    font-style: italic;
+    text-transform: uppercase;
+}
+
+.setting h3{
+    margin-right: 5px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 74px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(38px);
+    -ms-transform: translateX(38px);
+    transform: translateX(38px);
+}
+
 
 @media screen and (min-width:600px){
     .board{
@@ -163,7 +308,7 @@ body{
         height:400px;
     }
 
-    .board-wrapper, .display{
+    .board-wrapper, .display, nav{
         width:406px;
     }
 
@@ -171,12 +316,17 @@ body{
         grid-template-columns: .5fr 1fr;
     }
 
-    .message{
+    .message, .results{
         grid-column:1/3 ;
     }
 }
 
 @media screen and (min-width:850px){
+    nav{
+        width:850px;
+        font-size: 1.2rem;
+        /* letter-spacing: 2px; */
+    }
     .container{
         grid-template-columns: 1fr 2fr;
         grid-template-areas: "data board";
@@ -193,7 +343,7 @@ body{
         grid-auto-rows: minmax(min-content, max-content);
     }
 
-    .message{
+    .message, .results{
         grid-column:1 ;
     }
 
