--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     font-family:'Roboto', Arial, Helvetica, sans-serif;
     background:#f1f1f1;
     position: relative;
+    min-height: 100vh;
 }
 
 header{
@@ -210,7 +211,7 @@ th, td{
 }
 
 .modal{
-    position: absolute;
+    position: fixed;
     top:0;
     left:0;
     bottom:0;
@@ -220,7 +221,6 @@ th, td{
     align-items: center;
     justify-content: center;
     width:100%;
-    height:100vh;
 }
 
 .modal-inner{
