--- a/style.css
+++ b/style.css
@@ -199,15 +199,21 @@ th, td{
 }
 
 .settings{
-    display: flex;
-    justify-content: end;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap:2px
 }
 
-.settings button{
+.cog{
     background:white;
     border:none;
     font-size: 2rem;
     cursor: pointer;
+}
+
+.cog:hover{
+    background:#2196F3;
+    color:white;
 }
 
 .modal{
@@ -221,6 +227,7 @@ th, td{
     align-items: center;
     justify-content: center;
     width:100%;
+    z-index:10;
 }
 
 .modal-inner{
@@ -313,11 +320,7 @@ input:checked + .slider:before {
     }
 
     .display{
-        grid-template-columns: .5fr 1fr;
-    }
-
-    .message, .results{
-        grid-column:1/3 ;
+        grid-template-columns:1fr;
     }
 }
 
