--- a/style.css
+++ b/style.css
@@ -18,18 +18,16 @@ header{
 nav{
     padding:0.5em;
     font-weight: 900;
-    font-style: italic;
     margin:0 auto;
     width:300px;
 }
 
 .container{
     max-width:850px;
-    margin:1rem auto;
+    margin:1rem auto 0;
     display: grid;
     grid-template-columns: 1fr;
     gap:1rem;
-    /* border:1px solid red; */
 }
 
 .board {
@@ -54,7 +52,7 @@ nav{
 
 .display{
     width: 306px;
-    margin: 0 auto;
+    margin: 0 auto 3rem;
     display: grid;
     gap:2px;
 }
@@ -164,10 +162,6 @@ th, td{
     color:#fff;
 }
 
-/* .score-box{
-    
-} */
-
 .accuracy-box, .score-box{
     text-align: center;
     padding: 1rem;
@@ -206,8 +200,9 @@ th, td{
 
 .cog{
     background:white;
+    color:#505050;
     border:none;
-    font-size: 2rem;
+    font-size: 1.5rem;
     cursor: pointer;
 }
 
@@ -251,10 +246,6 @@ th, td{
     color:#505050;
     font-style: italic;
     text-transform: uppercase;
-}
-
-.setting h3{
-    margin-right: 5px;
 }
 
 .switch {
@@ -306,6 +297,20 @@ input:checked + .slider:before {
     -webkit-transform: translateX(38px);
     -ms-transform: translateX(38px);
     transform: translateX(38px);
+}
+
+footer{
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+footer a{
+    text-decoration: none;
+    padding:0.5rem;
+    color:rgb(165, 165, 165);
 }
 
 
