--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav{
 }
 
 .container{
-    max-width:850px;
+    max-width:1000px;
     margin:1rem auto 0;
     display: grid;
     grid-template-columns: 1fr;
@@ -85,6 +85,10 @@ table{
 th, td{
     text-align: center;
     padding:12px 14px;
+}
+
+.high-score{
+    text-align:center;
 }
 
 .target-square{
@@ -360,5 +364,12 @@ footer a{
 
     .rank, .file{
         font-size:1.2rem;
+    }
+}
+
+@media screen and (min-width:1000px){
+    .board{
+        width:500px;
+        height:500px;
     }
 }
